trunk/Archive2/b0/aced878c001b14/output
main.cpp:1:3: error: invalid preprocessing directive
# Περιλαμβάνουν <string.h> 
  ^
main.cpp:8:5: error: expected expression
    / / Αγώνες 
    ^
main.cpp:8:7: error: expected expression
    / / Αγώνες 
      ^
main.cpp:8:9: error: use of undeclared identifier 'Αγώνες'
    / / Αγώνες 
        ^
main.cpp:9:5: error: expected ':'
    int ένα = strcmp ( εγχόρδων, "Hello World!" ) ? 
    ^
   :
main.cpp:6:54: note: to match this '?'
    const  char * εγχόρδων =  "Hello World!" ?
                                             ^
main.cpp:9:5: error: expected expression
    int ένα = strcmp ( εγχόρδων, "Hello World!" ) ? 
    ^
main.cpp:14:39: error: expected ';' at end of declaration
    / / Μεγαλύτερη από ό, 
                        ^
                        ;
main.cpp:15:13: warning: implicitly declaring library function 'strcmp' with type 'int (const char *, const char *)'
    int b = strcmp ( εγχόρδων, "Hello" ) ? 
            ^
main.cpp:15:13: note: please include the header <string.h> or explicitly provide a declaration for 'strcmp'
main.cpp:16:5: warning: implicit declaration of function 'αν' is invalid in C99 [-Wimplicit-function-declaration]
    αν  ( β > =  1 )  { 
    ^
main.cpp:16:13: error: use of undeclared identifier 'β'
    αν  ( β > =  1 )  { 
          ^
main.cpp:16:18: error: expected expression
    αν  ( β > =  1 )  { 
              ^
main.cpp:16:26: error: expected ':'
    αν  ( β > =  1 )  { 
                      ^
                     :
main.cpp:15:50: note: to match this '?'
    int b = strcmp ( εγχόρδων, "Hello" ) ? 
                                         ^
main.cpp:16:26: error: expected expression
    αν  ( β > =  1 )  { 
                      ^
main.cpp:24:6: error: expected ';' at end of declaration
    } 
     ^
     ;
main.cpp:25:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
3 warnings and 12 errors generated.
